搭建基本页面

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -2,9 +2,84 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+   <ImageView
+       android:id="@+id/iv_top_bg"
+       android:layout_width="match_parent"
+       android:layout_height="227dp"
+       android:background="#5FC3FF"/>
+   <ImageView
+       android:id="@+id/iv_avatar"
+       android:layout_width="90dp"
+       android:layout_height="90dp"
+       android:layout_centerHorizontal="true"
+       android:layout_marginTop="79dp"
+       android:src="@mipmap/ic_launcher"/>
    <TextView
+       android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:text="@string/menu_mine"
-       android:layout_centerInParent="true"/>
+       android:layout_centerHorizontal="true"
+       android:layout_below="@id/iv_avatar"
+       android:textColor="@color/color_F6F6F6"
+       android:textSize="16sp"
+       android:padding="10dp"
+       android:text="点击登录"/>
+
+   <RelativeLayout
+       android:id="@+id/rl_my_resume"
+       android:layout_marginTop="40dp"
+       android:layout_width="match_parent"
+       android:layout_height="56dp"
+       android:paddingLeft="33dp"
+       android:paddingRight="33dp"
+       android:gravity="center_vertical"
+       android:layout_below="@id/iv_top_bg">
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textColor="@color/color_0d0d0d"
+          android:text="我的简历"/>
+   </RelativeLayout>
+   <RelativeLayout
+       android:id="@+id/rl_my_apply"
+       android:layout_width="match_parent"
+       android:layout_height="56dp"
+       android:paddingLeft="33dp"
+       android:paddingRight="33dp"
+       android:gravity="center_vertical"
+       android:layout_below="@id/rl_my_resume">
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textColor="@color/color_0d0d0d"
+          android:text="我的报名"/>
+   </RelativeLayout>
+   <RelativeLayout
+       android:id="@+id/rl_change_nick_name"
+       android:layout_width="match_parent"
+       android:layout_height="56dp"
+       android:paddingLeft="33dp"
+       android:paddingRight="33dp"
+       android:gravity="center_vertical"
+       android:layout_below="@id/rl_my_apply">
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textColor="@color/color_0d0d0d"
+          android:text="修改昵称"/>
+   </RelativeLayout>
+   <RelativeLayout
+       android:id="@+id/rl_about_us"
+       android:layout_width="match_parent"
+       android:layout_height="56dp"
+       android:paddingLeft="33dp"
+       android:paddingRight="33dp"
+       android:gravity="center_vertical"
+       android:layout_below="@id/rl_change_nick_name">
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textColor="@color/color_0d0d0d"
+          android:text="关于我们"/>
+   </RelativeLayout>
 </RelativeLayout>
