--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="white">#ffffffff</color>
     <color name="color_282828">#282828</color>
     <color name="color_588FFE">#588FFE</color>
+    <color name="color_F6F6F6">#F6F6F6</color>
+    <color name="color_0d0d0d">#0d0d0d</color>
 </resources>
