--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,10 @@
     <color name="color_282828">#282828</color>
     <color name="color_588FFE">#588FFE</color>
     <color name="color_F6F6F6">#F6F6F6</color>
+    <color name="divider">#F6F6F6</color>
     <color name="color_0d0d0d">#0d0d0d</color>
+    <color name="color_2A2A2A">#2A2A2A</color>
+    <color name="color_DB6D70">#DB6D70</color>
+    <color name="color_B8B7BA">#B8B7BA</color>
+
 </resources>
