--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
     <color name="color_2A2A2A">#2A2A2A</color>
     <color name="color_DB6D70">#DB6D70</color>
     <color name="color_B8B7BA">#B8B7BA</color>
-
+    <color name="color_939393">#939393</color>
 </resources>
