--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffdedede"
+    android:background="@color/white"
     tools:context="com.example.chenghejianzhi.activity.LoginActivity">
     <ImageView
         android:id="@+id/iv_top_bg"
         android:layout_width="match_parent"
         android:layout_height="227dp"
-        android:background="#5FC3FF"/>
+        android:background="@drawable/mine_bg"/>
     <TextView
         android:id="@+id/tv_login_title"
         android:layout_width="wrap_content"
@@ -29,7 +29,7 @@
         android:layout_below="@id/tv_login_title"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="5dp"
-        app:cardElevation="4dp">
+        app:cardElevation="10dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
