--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@color/white"
+    >
+
+   <LinearLayout
+       android:id="@+id/rl_search"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="26dp"
+       android:layout_marginBottom="6dp"
+       android:layout_alignParentRight="true"
+       android:orientation="horizontal"
+       android:background="@drawable/home_search_bg"
+       android:paddingLeft="18dp"
+       android:paddingRight="12dp"
+       android:paddingTop="6dp"
+       android:paddingBottom="6dp"
+       android:gravity="center"
+       android:layout_marginRight="14dp"
+       android:layout_marginLeft="14dp">
+      <TextView
+          android:id="@+id/tv_search"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textSize="15sp"
+          android:text="搜索"
+          android:textColor="@color/color_939393"
+          />
+      <ImageView
+          android:layout_width="15dp"
+          android:layout_height="15dp"
+          android:layout_marginLeft="16dp"
+          android:src="@drawable/home_search_icon"/>
+   </LinearLayout>
 
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
+       android:layout_below="@id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
 </RelativeLayout>
