增加搜索和我的简历ui

--- a/app/src/main/res/layout/item_home_hot_recommend.xml
+++ b/app/src/main/res/layout/item_home_hot_recommend.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="112dp"
-    android:paddingLeft="14dp"
-    android:paddingRight="14dp">
+    android:paddingLeft="14dp">
 
     <TextView
         android:id="@+id/tv_job_title"
@@ -11,6 +10,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/color_2A2A2A"
         android:textSize="16sp"
+        android:layout_marginRight="14dp"
         android:text="微信在线兼职，随时随地做，秒结"/>
 
     <TextView
@@ -44,4 +44,19 @@
         android:textSize="13sp"
         android:text="日结 | 长期 | 男女不限"/>
 
+    <ImageView
+        android:id="@+id/go_detail_button"
+        android:layout_below="@id/tv_job_title"
+        android:layout_width="89dp"
+        android:layout_height="45dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginTop="14dp"
+        android:src="@drawable/go_detail_button"
+        android:layout_alignParentRight="true"/>
+    <View
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginRight="14dp"
+        android:background="@color/divider"/>
 </RelativeLayout>
