--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,6 +80,7 @@
                     android:textColor="#ff0d0d0d"
                     />
                 <TextView
+                    android:id="@+id/tv_getcode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="获取验证码"
@@ -96,6 +97,7 @@
                 android:layout_marginTop="18dp"
                 android:background="@color/color_F6F6F6" />
             <TextView
+                android:id="@+id/tv_login"
                 android:layout_marginTop="70dp"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
