完成所有功能

--- a/app/src/main/res/layout/activity_job_detail.xml
+++ b/app/src/main/res/layout/activity_job_detail.xml
@@ -1,9 +1,250 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/white"
+    android:paddingTop="20dp"
     tools:context="com.example.chenghejianzhi.activity.JobDetailActivity">
+    <RelativeLayout
+        android:id="@+id/rl_top"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:paddingLeft="14dp"
+        android:paddingRight="14dp"
+        android:background="@color/white">
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:paddingRight="20dp"
+            android:src="@drawable/back"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_282828"
+            android:layout_centerInParent="true"
+            android:text="详情"
+            android:textSize="19sp"/>
 
-</android.support.constraint.ConstraintLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/divider"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
+    <android.support.v4.widget.NestedScrollView
+        android:layout_below="@id/rl_top"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@color/divider">
+            <RelativeLayout
+                android:id="@+id/rl_detail_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
+                android:background="@color/white">
+                <TextView
+                    android:id="@+id/tv_job_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_282828"
+                    android:textSize="21sp"
+                    />
+                <TextView
+                    android:layout_below="@id/tv_job_title"
+                    android:id="@+id/tv_update_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_939393"
+                    android:textSize="13sp"
+
+                    android:layout_marginTop="8dp"/>
+                <TextView
+                    android:id="@+id/tv_job_money"
+                    android:layout_marginTop="15dp"
+                    android:layout_below="@id/tv_update_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_DB6D70"
+                    android:textSize="23sp"
+                    />
+                <TextView
+                    android:id="@+id/tv_job_unit"
+                    android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@id/tv_job_money"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_alignBottom="@id/tv_job_money"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_DB6D70"
+                    android:textSize="11sp"
+                    android:text="元/天"/>
+
+                <com.zhy.view.flowlayout.TagFlowLayout
+                    android:id="@+id/flowLayout"
+                    android:layout_below="@id/tv_job_money"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"/>
+                <TextView
+                    android:id="@+id/tv_work_time"
+                    android:layout_below="@id/flowLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/color_282828"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_work_location"
+                    android:layout_below="@id/tv_work_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/color_282828"
+                    />
+                <TextView
+                    android:layout_below="@id/tv_work_location"
+                    android:id="@+id/tv_copy"
+                    android:layout_marginTop="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:background="@drawable/shape_retangle_5aa1fd_r25"
+                    android:text="点击复制联系方式 QQ:1234567890>"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/rl_detail_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/white">
+                <TextView
+                    android:id="@+id/tv_work_content_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_282828"
+                    android:textSize="18sp"
+                    android:text="工作内容"/>
+                <TextView
+                    android:layout_below="@id/tv_work_content_title"
+                    android:id="@+id/tv_work_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_656565"
+                    android:textSize="13sp"
+
+                    android:layout_marginTop="8dp"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_detail_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/white">
+                <TextView
+                    android:id="@+id/tv_company_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_282828"
+                    android:textSize="21sp"
+                    android:text="公司信息"/>
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardElevation="4dp">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="18dp"
+                        android:paddingBottom="18dp"
+                        android:paddingLeft="8dp">
+                        <ImageView
+                            android:id="@+id/iv_company_logo"
+                            android:layout_width="44dp"
+                            android:layout_height="44dp"
+                            android:src="@drawable/default_avatar"
+                            android:layout_marginRight="15dp"/>
+                       <TextView
+                           android:id="@+id/tv_company_name"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:textSize="17sp"
+                           android:layout_toRightOf="@id/iv_company_logo"
+                           android:textColor="@color/color_282828"
+                           android:maxWidth="240dp"
+                           android:lines="1"
+                           android:ellipsize="end"
+                           />
+                        <ImageView
+                            android:visibility="gone"
+                            android:layout_toRightOf="@id/tv_company_name"
+                            android:layout_width="48dp"
+                            android:layout_height="15dp"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginLeft="10dp"
+                            android:src="@drawable/company_auth_icon"/>
+                        <TextView
+                            android:id="@+id/tv_star"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="13sp"
+                            android:layout_marginTop="6dp"
+                            android:layout_below="@id/tv_company_name"
+                            android:layout_toRightOf="@id/iv_company_logo"
+                            android:textColor="@color/color_B8B7BA"
+                            android:text="综合评分"/>
+
+                        <LinearLayout
+                            android:id="@+id/ll_star"
+                            android:layout_toRightOf="@id/tv_star"
+                            android:layout_below="@id/tv_company_name"
+                            android:layout_marginTop="6dp"
+                            android:orientation="horizontal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:layout_marginLeft="10dp"/>
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
+
+            </RelativeLayout>
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+    <TextView
+        android:id="@+id/tv_apply"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/white"
+        android:text="报名参加"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:background="@drawable/shape_apply_bg"/>
+</LinearLayout>
