--- a/app/src/main/res/layout/activity_join_part_time.xml
+++ b/app/src/main/res/layout/activity_join_part_time.xml
@@ -5,15 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:paddingTop="20dp"
     tools:context="com.example.chenghejianzhi.activity.SearchActivity">
 
     <RelativeLayout
-        android:id="@+id/rl_search"
+        android:id="@+id/rl_top"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:paddingLeft="14dp"
         android:paddingRight="14dp">
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:paddingRight="20dp"
+            android:src="@drawable/back"/>
        <TextView
+           android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_282828"
@@ -29,16 +37,24 @@
     </RelativeLayout>
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler"
-        android:layout_below="@id/rl_search"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/smart_refresh"
+        android:layout_below="@id/rl_top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="14dp"
-        android:paddingRight="14dp"/>
+        android:layout_height="wrap_content">
+        <com.scwang.smartrefresh.layout.header.ClassicsHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     <RelativeLayout
         android:id="@+id/rl_no_data"
-        android:layout_below="@id/rl_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone">
