--- a/app/src/main/res/layout/dialog_change_nickname.xml
+++ b/app/src/main/res/layout/dialog_change_nickname.xml
@@ -29,6 +29,7 @@
         android:layout_marginRight="24dp"
         android:layout_marginLeft="24dp"
         android:textSize="14sp"
+        android:textColor="@color/color_0d0d0d"
         android:gravity="center_vertical"
         android:paddingLeft="16dp"
         android:layout_marginBottom="31dp"/>
@@ -46,7 +47,7 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:textSize="16sp"
-            android:text="跳过"
+            android:text="取消"
             android:gravity="center"
             android:textColor="#939393"
             android:layout_height="match_parent" />
