--- a/app/src/main/res/layout/item_home_hot_activity.xml
+++ b/app/src/main/res/layout/item_home_hot_activity.xml
@@ -3,8 +3,10 @@
     android:layout_width="wrap_content" android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/iv_ad"
         android:layout_width="207dp"
         android:layout_height="120dp"
         android:scaleType="fitXY"
+        android:layout_marginRight="8dp"
         android:src="@drawable/item_home_hot_bg_test"/>
 </RelativeLayout>
