--- a/app/src/main/res/layout/activity_personal_resume.xml
+++ b/app/src/main/res/layout/activity_personal_resume.xml
@@ -7,8 +7,28 @@
     tools:context="com.example.chenghejianzhi.activity.PersonalResumeActivity">
 
     <RelativeLayout
+        android:id="@+id/rl_top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="44dp"
+        android:paddingLeft="14dp"
+        android:paddingRight="14dp"
+        android:layout_marginTop="20dp"
+        android:elevation="2dp"
+        android:background="@color/transparent">
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:paddingRight="20dp"
+            android:tint="@color/white"
+            android:src="@drawable/back"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:layout_centerInParent="true"
+            android:text="个人简历"
+            android:textSize="19sp"/>
 
     </RelativeLayout>
 
@@ -32,6 +52,8 @@
                 android:layout_marginLeft="14dp"
                 android:layout_marginTop="126dp"
                 android:layout_marginRight="14dp"
+                android:layout_marginBottom="30dp"
+                android:paddingBottom="30dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="5dp"
                 app:cardElevation="1dp">
@@ -49,8 +71,9 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="71dp"
                         android:gravity="center_vertical"
-                        android:text="请输入姓名"
-                        android:textColor="#B2B2B2"
+                        android:hint="请输入真实姓名"
+                        android:textColorHint="#B2B2B2"
+                        android:textColor="@color/color_0d0d0d"
                         android:textSize="15sp" />
 
                     <RadioGroup
@@ -74,6 +97,8 @@
                             android:drawablePadding="13dp"
                             android:gravity="center"
                             android:text="男"
+                            android:checked="true"
+                            android:background="@color/white"
                             android:textColor="@color/color_0d0d0d"
                             android:textSize="16sp" />
 
@@ -88,12 +113,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right"
-                            android:layout_marginLeft="100dp"
                             android:button="@null"
                             android:drawableTop="@drawable/sex_woman_bg"
                             android:drawablePadding="13dp"
                             android:gravity="center"
                             android:text="女"
+                            android:background="@color/white"
                             android:textColor="@color/color_0d0d0d"
                             android:textSize="16sp" />
                     </RadioGroup>
@@ -109,12 +134,13 @@
                         android:textSize="16sp" />
 
                     <TextView
+                        android:id="@+id/tv_birthday"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/rg_menu"
                         android:layout_alignParentRight="true"
                         android:layout_marginTop="33dp"
-                        android:text="出生日期"
+                        android:text="选择生日"
                         android:textColor="#656565"
                         android:textSize="14sp" />
                     <TextView
@@ -133,6 +159,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="11dp"
                         android:minHeight="119dp"
+                        android:gravity="top"
                         android:background="#fff6f6f6"/>
 
                     <TextView
@@ -150,9 +177,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="11dp"
-                        android:minHeight="11dp"
+                        android:minHeight="119dp"
+                        android:gravity="top"
                         android:background="#fff6f6f6"/>
                     <TextView
+                        android:id="@+id/tv_commit"
                         android:layout_below="@id/et_self_intro"
                         android:layout_marginTop="33dp"
                         android:layout_width="match_parent"
@@ -162,7 +191,7 @@
                         android:gravity="center"
                         android:layout_centerHorizontal="true"
                         android:background="@drawable/shape_login_bg"
-                        android:text="登录"/>
+                        android:text="保存"/>
                 </RelativeLayout>
 
             </android.support.v7.widget.CardView>
@@ -175,7 +204,7 @@
                 android:layout_marginTop="81dp"
                 android:elevation="1dp"
                 android:background="@drawable/shape_white_round_bg"
-                android:src="@drawable/defautl_avatar" />
+                android:src="@drawable/default_avatar" />
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
 
