--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:paddingTop="20dp"
     tools:context="com.example.chenghejianzhi.activity.SearchActivity">
 
     <RelativeLayout
@@ -13,7 +14,15 @@
         android:layout_height="44dp"
         android:paddingLeft="14dp"
         android:paddingRight="14dp">
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:paddingRight="20dp"
+            android:src="@drawable/back"/>
         <EditText
+            android:id="@+id/et_search"
+            android:layout_toRightOf="@id/iv_back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -40,13 +49,22 @@
         android:paddingLeft="14dp"
         android:paddingRight="14dp"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/smart_refresh"
         android:layout_below="@id/tv_search_result"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="14dp"
-        android:paddingRight="14dp"/>
+        android:layout_height="wrap_content">
+        <com.scwang.smartrefresh.layout.header.ClassicsHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     <RelativeLayout
         android:id="@+id/rl_no_data"
         android:layout_below="@id/rl_search"
