--- a/app/src/main/res/layout/fragment_all.xml
+++ b/app/src/main/res/layout/fragment_all.xml
@@ -33,9 +33,20 @@
           android:layout_marginLeft="16dp"
           android:src="@drawable/home_search_icon"/>
    </LinearLayout>
-   <android.support.v7.widget.RecyclerView
+   <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:layout_below="@id/rl_search"
-       android:id="@+id/recycler"
+       android:id="@+id/smart_refresh"
        android:layout_width="match_parent"
-       android:layout_height="match_parent" />
+       android:layout_height="match_parent">
+      <com.scwang.smartrefresh.layout.header.ClassicsHeader
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"/>
+      <android.support.v7.widget.RecyclerView
+          android:id="@+id/recycler"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
+      <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"/>
+   </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </RelativeLayout>
