--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -14,9 +14,10 @@
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
-       android:src="@drawable/defautl_avatar"
+       android:src="@drawable/default_avatar"
        android:background="@drawable/shape_white_round_bg"/>
    <TextView
+       android:id="@+id/tv_nickname"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
