--- a/app/src/main/res/layout/item_recommend_banner.xml
+++ b/app/src/main/res/layout/item_recommend_banner.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:paddingLeft="14dp"
-    android:paddingRight="14dp">
+    android:paddingRight="14dp"
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp">
 
     <com.youth.banner.Banner
         android:id="@+id/banner"
