--- a/app/src/main/res/layout/activity_job_detail.xml
+++ b/app/src/main/res/layout/activity_job_detail.xml
@@ -68,16 +68,17 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/color_939393"
                     android:textSize="13sp"
-
+                    android:text="更新时间：2019-7-21"
                     android:layout_marginTop="8dp"/>
                 <TextView
                     android:id="@+id/tv_job_money"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="8dp"
                     android:layout_below="@id/tv_update_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/color_DB6D70"
                     android:textSize="23sp"
+                    android:text="120"
                     />
                 <TextView
                     android:id="@+id/tv_job_unit"
@@ -97,7 +98,8 @@
                     android:layout_below="@id/tv_job_money"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"/>
+                    android:paddingLeft="0dp"
+                    android:layout_marginTop="8dp"/>
                 <TextView
                     android:id="@+id/tv_work_time"
                     android:layout_below="@id/flowLayout"
@@ -145,6 +147,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/color_282828"
                     android:textSize="18sp"
+                    android:visibility="gone"
                     android:text="工作内容"/>
                 <TextView
                     android:layout_below="@id/tv_work_content_title"
@@ -210,27 +213,34 @@
                             android:layout_marginTop="4dp"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/company_auth_icon"/>
-                        <TextView
-                            android:id="@+id/tv_star"
+                        <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="13sp"
                             android:layout_marginTop="6dp"
                             android:layout_below="@id/tv_company_name"
-                            android:layout_toRightOf="@id/iv_company_logo"
-                            android:textColor="@color/color_B8B7BA"
-                            android:text="综合评分"/>
+                            android:layout_toRightOf="@id/iv_company_logo">
+                            <TextView
+                                android:id="@+id/tv_star"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="13sp"
 
-                        <LinearLayout
-                            android:id="@+id/ll_star"
-                            android:layout_toRightOf="@id/tv_star"
-                            android:layout_below="@id/tv_company_name"
-                            android:layout_marginTop="6dp"
-                            android:orientation="horizontal"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_marginLeft="10dp"/>
+                                android:layout_centerVertical="true"
+
+                                android:textColor="@color/color_B8B7BA"
+                                android:text="综合评分"/>
+
+                            <LinearLayout
+                                android:id="@+id/ll_star"
+                                android:layout_toRightOf="@id/tv_star"
+                                android:orientation="horizontal"
+                                android:layout_centerVertical="true"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:layout_marginLeft="10dp"/>
+                        </RelativeLayout>
+
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
 
