--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:text="获取验证码"
                     android:textSize="15sp"
-                    android:textColor="@color/color_588FFE"/>
+                    android:textColor="@color/color_B2B2B2"/>
             </LinearLayout>
 
 
