--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.Design.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <!--左滑退出-->
+        <!--<item name="android:windowSwipeToDismiss">true</item>-->
     </style>
     <style name="Dialog.Default" parent="Theme.AppCompat.Dialog">
         <item name="android:windowFrame">@null</item>
