--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="color_656565">#656565</color>
     <color name="color_B2B2B2">#B2B2B2</color>
     <color name="transparent">#00000000</color>
+    <color name="color_f1f2f3f4">#f1f2f3f4</color>
 </resources>
