--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:layout_centerInParent="true"
-            android:text="个人简历"
+            android:text="关于我们"
             android:textSize="19sp"/>
 
     </RelativeLayout>
@@ -80,10 +80,9 @@
                 android:textColor="@color/color_939393"
                 android:textSize="14sp"
                 android:gravity="center"
-
                 android:layout_alignParentBottom="true"
                 android:background="@drawable/shape_retangle_f6f6f6_r25"
-                android:text="客服QQ：010123456"/>
+                android:text="客服QQ：9685719"/>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
