--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -109,4 +109,13 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
+    <ImageView
+        android:id="@+id/iv_close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/close_white"
+        android:layout_marginTop="24dp"
+        android:padding="14dp"
+        android:layout_alignParentRight="true"
+        />
 </RelativeLayout>
