--- a/app/src/main/res/layout/item_recommend_all.xml
+++ b/app/src/main/res/layout/item_recommend_all.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:paddingLeft="14dp"
+    android:background="@drawable/recyclerview_touch_bg"
     >
 
     <TextView
